# lbsim_tools

./: README.md  detsfile_generator.py  lbsim_tools.py  pyproject.toml  test.py
.ipynb_checkpoints/: README-checkpoint.md  setup-checkpoint.py
lbsim_tools/: __init__.py  lbsim_tools.py
lbsim_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lbsim_tools/.ipynb_checkpoints/: __init__-checkpoint.py  lbsim_tools-checkpoint.py
notebooks/: deconv_verification.ipynb  simple_model_spectrum.npz
notebooks/.ipynb_checkpoints/: deconv_verification-checkpoint.ipynb
python/: generate_foregrounds.py  lbs2fgbuster.py
script/: detsfile_generator.py
