[tool.poetry]
name = "lbsim_tools"
version = "0.1.0"
license = "GPL3"
description = "Tools for simulations by using the litebird_sim."
authors = ["yusuke-takase <takase_y@s.okayama-u.ac.jp>"]
readme = "README.md"
repository = "https://github.com/yusuke-takase/lbsim_tools"

keywords = [
    "CMB",
    "litebird_sim",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24"
healpy = "^1.15.0"
litebird_sim = "^0.13.0"
pandas = "<=2.2.2"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
